Update: /api/product/productList (#68)
