# back/swagger.yaml
@@ -711,6 +711,11 @@ paths:
       summary: 상품 리스트
       parameters:
         - in: query
+          name: productTitle
+          schema:
+            type: string
+          description: '제품 이름 검색용 쿼리입니다. 제품 이름의 부분을 검색합니다. <br>`다중 검색 쿼리를 사용하려면 ,를 사용하세요 "Shirt,Red"`'
+        - in: query
           name: mainSort
           schema:
             type: integer
